--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
     const clientsCol = collection(db, "clients");
 
     // --- ضع رقمك هنا بالضبط ليسمح لك فقط بالدخول ---
-    const ADMIN_PHONE = "+9665XXXXXXXX"; 
+    const ADMIN_PHONE = "+966534152055"; 
 
     let clients = [];
     let showOnlyLate = false;
