--- a/index.html
+++ b/index.html
@@ -6,63 +6,44 @@
     <title>i-System Pro | التقسيط الذكي</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
     <style>
-        :root { --bg-dark: #0f1217; --card-bg: #1c2128; --accent-orange: #ff6b35; --text-main: #ffffff; --text-dim: #e0e0e0; --success-green: #2ecc71; --error-red: #e74c3c; }
-        body { background-color: var(--bg-dark); color: var(--text-main); font-family: 'Segoe UI', Roboto, sans-serif; margin-bottom: 90px; }
-        .stat-card { background: var(--card-bg); border-radius: 20px; padding: 20px; border: 1px solid rgba(255,255,255,0.1); margin-bottom: 20px; }
-        .form-control { background: #24292f !important; border: 1px solid #3d444d !important; border-radius: 12px !important; color: #ffffff !important; padding: 12px !important; }
-        .btn-action { background: var(--accent-orange); color: white; border: none; border-radius: 15px; padding: 15px; font-weight: bold; }
-        .bottom-nav { position: fixed; bottom: 0; left: 0; right: 0; background: rgba(28, 33, 40, 0.98); backdrop-filter: blur(15px); display: flex; padding: 12px 0; border-top: 1px solid rgba(255,255,255,0.1); z-index: 1000; }
-        .nav-item { color: #8b949e; text-align: center; flex: 1; cursor: pointer; font-size: 0.8rem; }
-        .nav-item.active { color: var(--accent-orange); }
-        .nav-item i { font-size: 1.5rem; display: block; }
-        .client-row { background: #24292f; border-radius: 15px; margin-bottom: 12px; padding: 15px; display: flex; justify-content: space-between; align-items: center; }
-        .status-paid { color: var(--success-green); background: rgba(46, 204, 113, 0.1); padding: 2px 8px; border-radius: 5px; }
-        .status-unpaid { color: var(--error-red); background: rgba(231, 76, 60, 0.1); padding: 2px 8px; border-radius: 5px; }
+        :root { --bg-dark: #0f1217; --card-bg: #1c2128; --accent-orange: #ff6b35; --text-main: #ffffff; }
+        body { background-color: var(--bg-dark); color: var(--text-main); font-family: 'Segoe UI', sans-serif; }
+        .stat-card { background: var(--card-bg); border-radius: 20px; padding: 25px; border: 1px solid rgba(255,255,255,0.1); }
+        .btn-action { background: var(--accent-orange); color: white; border-radius: 15px; padding: 15px; width: 100%; border: none; font-weight: bold; }
+        .form-control { background: #24292f !important; border: 1px solid #3d444d !important; color: white !important; border-radius: 12px; padding: 12px; }
     </style>
 </head>
 <body>
 
-<div id="loginPage" class="p-4 mt-5">
+<div id="loginPage" class="container mt-5">
     <div class="stat-card text-center shadow-lg">
-        <div style="background: var(--accent-orange); width: 60px; height: 60px; border-radius: 20px; display: flex; align-items: center; justify-content: center; margin: 0 auto 20px;">
-            <i class="bi bi-shield-lock-fill text-white fs-2"></i>
-        </div>
-        <h4 class="fw-bold text-white">دخول i-System</h4>
+        <h4 class="fw-bold mb-4">دخول i-System</h4>
         <div id="phoneArea">
-            <label class="mt-2 text-white">أدخل رقم الجوال</label>
-            <input type="text" id="phoneInput" class="form-control text-center my-4 fs-5" placeholder="0534152055">
-            <button onclick="sendOTP()" class="btn btn-action w-100">تحقق من الرقم</button>
+            <input type="text" id="phoneInput" class="form-control text-center mb-3 fs-5" placeholder="0534152055">
+            <button id="sendBtn" class="btn btn-action">تحقق من الرقم</button>
             <div id="recaptcha-container" class="mt-3"></div>
         </div>
         <div id="otpArea" style="display: none;">
-            <label class="mt-2 text-white">أدخل الكود (112233)</label>
-            <input type="text" id="otpInput" class="form-control text-center my-4 fs-4" placeholder="••••••">
-            <button onclick="verifyOTP()" class="btn btn-action w-100">تأكيد الدخول</button>
+            <input type="text" id="otpInput" class="form-control text-center mb-3 fs-4" placeholder="••••••">
+            <button id="verifyBtn" class="btn btn-action">تأكيد الدخول</button>
         </div>
     </div>
 </div>
 
-<div id="mainContent" style="display: none;">
-    <section id="homeSection" class="p-3">
-        <div class="stat-card text-center border-0" style="background: linear-gradient(145deg, #1c2128, #111418);">
-            <label class="text-white">إجمالي المحفظة</label>
-            <h1 class="fw-bold my-2" id="totalInvestment" style="color: #ffffff;">0</h1>
-        </div>
-        <div id="clientsList" class="mt-4"></div>
-    </section>
-
-    <div class="bottom-nav">
-        <div class="nav-item active" onclick="showSection('home')"><i class="bi bi-house-door-fill"></i>الرئيسية</div>
-        <div class="nav-item" onclick="logout()"><i class="bi bi-box-arrow-right"></i>خروج</div>
+<div id="mainContent" style="display: none;" class="p-3">
+    <div class="stat-card text-center mb-4">
+        <h6>إجمالي المحفظة</h6>
+        <h2 id="totalInvestment" class="fw-bold text-orange">0</h2>
     </div>
+    <div id="clientsList"></div>
+    <button onclick="logout()" class="btn btn-outline-danger w-100 mt-4">خروج</button>
 </div>
 
 <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-app.js";
-    import { getFirestore, collection, onSnapshot } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js";
     import { getAuth, RecaptchaVerifier, signInWithPhoneNumber, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-auth.js";
+    import { getFirestore, collection, onSnapshot } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js";
 
     const firebaseConfig = {
         apiKey: "AIzaSyCsF-OsbE075c0lwhhcOj6GIHdUZAfCHCU",
@@ -74,40 +55,51 @@
     };
 
     const app = initializeApp(firebaseConfig);
-    const db = getFirestore(app);
     const auth = getAuth(app);
-
+    const db = getFirestore(app);
     const ADMIN_PHONE = "+966534152055";
 
-    window.setupRecaptcha = () => {
+    // ربط الأزرار برمجياً بدلاً من onclick العادي لتجنب مشاكل المتصفح
+    document.getElementById('sendBtn').addEventListener('click', sendOTP);
+    document.getElementById('verifyBtn').addEventListener('click', verifyOTP);
+
+    function setupRecaptcha() {
         if (!window.recaptchaVerifier) {
             window.recaptchaVerifier = new RecaptchaVerifier(auth, 'recaptcha-container', { 'size': 'invisible' });
         }
-    };
+    }
 
-    window.sendOTP = () => {
+    async function sendOTP() {
         let phone = document.getElementById('phoneInput').value.trim();
+        // تصحيح الرقم تلقائياً
         if(phone.startsWith('05')) phone = '+966' + phone.substring(1);
-        if(phone === '534152055') phone = '+966534152055';
+        else if(!phone.startsWith('+')) phone = '+966' + phone;
 
         if (phone !== ADMIN_PHONE) {
-            alert("هذا الرقم غير مصرح له");
+            alert("هذا الرقم غير مصرح له بالدخول");
             return;
         }
 
         setupRecaptcha();
-        signInWithPhoneNumber(auth, phone, window.recaptchaVerifier)
-            .then((res) => {
-                window.confirmationResult = res;
-                document.getElementById('phoneArea').style.display = 'none';
-                document.getElementById('otpArea').style.display = 'block';
-            }).catch((err) => alert("خطأ: " + err.message));
-    };
+        try {
+            const confirmationResult = await signInWithPhoneNumber(auth, phone, window.recaptchaVerifier);
+            window.confirmationResult = confirmationResult;
+            document.getElementById('phoneArea').style.display = 'none';
+            document.getElementById('otpArea').style.display = 'block';
+            alert("تم إرسال الكود أو استخدم كود الاختبار");
+        } catch (error) {
+            alert("خطأ: " + error.message);
+        }
+    }
 
-    window.verifyOTP = () => {
+    async function verifyOTP() {
         const code = document.getElementById('otpInput').value;
-        window.confirmationResult.confirm(code).catch(() => alert("الرمز خطأ"));
-    };
+        try {
+            await window.confirmationResult.confirm(code);
+        } catch (error) {
+            alert("الرمز غير صحيح");
+        }
+    }
 
     onAuthStateChanged(auth, (user) => {
         if (user && user.phoneNumber === ADMIN_PHONE) {
@@ -122,13 +114,13 @@
 
     function loadData() {
         onSnapshot(collection(db, "clients"), (snap) => {
+            let total = 0;
             const list = document.getElementById('clientsList');
             list.innerHTML = '';
-            let total = 0;
             snap.forEach(doc => {
                 const c = doc.data();
                 total += parseFloat(c.total || 0);
-                list.innerHTML += `<div class="client-row"><div><h6 class="text-white">${c.name}</h6></div><div class="fw-bold text-warning">${c.total}</div></div>`;
+                list.innerHTML += `<div class="stat-card mb-2 d-flex justify-content-between"><span>${c.name}</span><b>${c.total}</b></div>`;
             });
             document.getElementById('totalInvestment').innerText = total.toLocaleString() + ' ر.س';
         });
