--- a/index.html
+++ b/index.html
@@ -3,130 +3,100 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>i-System Pro | التقسيط الذكي</title>
+    <title>i-System | دخول آمن</title>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <style>
-        :root { --bg-dark: #0f1217; --card-bg: #1c2128; --accent-orange: #ff6b35; --text-main: #ffffff; }
-        body { background-color: var(--bg-dark); color: var(--text-main); font-family: 'Segoe UI', sans-serif; }
-        .stat-card { background: var(--card-bg); border-radius: 20px; padding: 25px; border: 1px solid rgba(255,255,255,0.1); }
-        .btn-action { background: var(--accent-orange); color: white; border-radius: 15px; padding: 15px; width: 100%; border: none; font-weight: bold; }
-        .form-control { background: #24292f !important; border: 1px solid #3d444d !important; color: white !important; border-radius: 12px; padding: 12px; }
+        body { background-color: #0f1217; color: white; font-family: sans-serif; text-align: center; }
+        .login-card { background: #1c2128; border-radius: 20px; padding: 30px; margin-top: 50px; border: 1px solid #333; }
+        .btn-orange { background: #ff6b35; color: white; border-radius: 12px; padding: 12px; width: 100%; border: none; font-weight: bold; }
+        .input-dark { background: #24292f; border: 1px solid #444; color: white; text-align: center; border-radius: 10px; margin-bottom: 20px; padding: 15px; width: 100%; }
     </style>
 </head>
 <body>
 
-<div id="loginPage" class="container mt-5">
-    <div class="stat-card text-center shadow-lg">
-        <h4 class="fw-bold mb-4">دخول i-System</h4>
-        <div id="phoneArea">
-            <input type="text" id="phoneInput" class="form-control text-center mb-3 fs-5" placeholder="0534152055">
-            <button id="sendBtn" class="btn btn-action">تحقق من الرقم</button>
-            <div id="recaptcha-container" class="mt-3"></div>
-        </div>
-        <div id="otpArea" style="display: none;">
-            <input type="text" id="otpInput" class="form-control text-center mb-3 fs-4" placeholder="••••••">
-            <button id="verifyBtn" class="btn btn-action">تأكيد الدخول</button>
+<div class="container">
+    <div class="row justify-content-center">
+        <div class="col-md-5 login-card">
+            <h3 class="mb-4">دخول نظام التقسيط</h3>
+            
+            <div id="phone-box">
+                <input type="text" id="phone" class="input-dark" placeholder="0534152055">
+                <button onclick="sendCode()" class="btn btn-orange">إرسال الرمز</button>
+                <div id="recaptcha-container" class="mt-3"></div>
+            </div>
+
+            <div id="otp-box" style="display:none;">
+                <input type="text" id="otp" class="input-dark" placeholder="أدخل الرمز">
+                <button onclick="verifyCode()" class="btn btn-orange">تأكيد الدخول</button>
+            </div>
         </div>
     </div>
 </div>
 
-<div id="mainContent" style="display: none;" class="p-3">
-    <div class="stat-card text-center mb-4">
-        <h6>إجمالي المحفظة</h6>
-        <h2 id="totalInvestment" class="fw-bold text-orange">0</h2>
-    </div>
-    <div id="clientsList"></div>
-    <button onclick="logout()" class="btn btn-outline-danger w-100 mt-4">خروج</button>
+<div id="app-content" style="display:none;" class="p-4">
+    <h2 class="text-warning">مرحباً بك يا مدير</h2>
+    <div id="data-display" class="mt-4">جاري تحميل البيانات...</div>
+    <button onclick="location.reload()" class="btn btn-danger mt-4">تسجيل خروج</button>
 </div>
 
-<script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-app.js";
-    import { getAuth, RecaptchaVerifier, signInWithPhoneNumber, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-auth.js";
-    import { getFirestore, collection, onSnapshot } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js";
-
+<script>
+    // إعدادات Firebase الخاصة بك
     const firebaseConfig = {
         apiKey: "AIzaSyCsF-OsbE075c0lwhhcOj6GIHdUZAfCHCU",
         authDomain: "myinstallmentsystem.firebaseapp.com",
         projectId: "myinstallmentsystem",
-        storageBucket: "myinstallmentsystem.firebasestorage.app",
-        messagingSenderId: "1073933519716",
         appId: "1:1073933519716:web:caac200c07e0356f81c871"
     };
+    
+    firebase.initializeApp(firebaseConfig);
+    const auth = firebase.auth();
+    const db = firebase.firestore();
 
-    const app = initializeApp(firebaseConfig);
-    const auth = getAuth(app);
-    const db = getFirestore(app);
-    const ADMIN_PHONE = "+966534152055";
+    // إعداد أداة التحقق
+    window.recaptchaVerifier = new firebase.auth.RecaptchaVerifier('recaptcha-container', { 'size': 'invisible' });
 
-    // ربط الأزرار برمجياً بدلاً من onclick العادي لتجنب مشاكل المتصفح
-    document.getElementById('sendBtn').addEventListener('click', sendOTP);
-    document.getElementById('verifyBtn').addEventListener('click', verifyOTP);
+    function sendCode() {
+        let num = document.getElementById('phone').value.trim();
+        // تصحيح الرقم
+        if(num.startsWith('0')) num = '+966' + num.substring(1);
+        if(!num.startsWith('+')) num = '+966' + num;
 
-    function setupRecaptcha() {
-        if (!window.recaptchaVerifier) {
-            window.recaptchaVerifier = new RecaptchaVerifier(auth, 'recaptcha-container', { 'size': 'invisible' });
-        }
-    }
-
-    async function sendOTP() {
-        let phone = document.getElementById('phoneInput').value.trim();
-        // تصحيح الرقم تلقائياً
-        if(phone.startsWith('05')) phone = '+966' + phone.substring(1);
-        else if(!phone.startsWith('+')) phone = '+966' + phone;
-
-        if (phone !== ADMIN_PHONE) {
-            alert("هذا الرقم غير مصرح له بالدخول");
+        if(num !== "+966534152055") {
+            alert("هذا الرقم غير مسموح له");
             return;
         }
 
-        setupRecaptcha();
-        try {
-            const confirmationResult = await signInWithPhoneNumber(auth, phone, window.recaptchaVerifier);
-            window.confirmationResult = confirmationResult;
-            document.getElementById('phoneArea').style.display = 'none';
-            document.getElementById('otpArea').style.display = 'block';
-            alert("تم إرسال الكود أو استخدم كود الاختبار");
-        } catch (error) {
-            alert("خطأ: " + error.message);
-        }
+        auth.signInWithPhoneNumber(num, window.recaptchaVerifier)
+            .then(result => {
+                window.confirmationResult = result;
+                document.getElementById('phone-box').style.display = 'none';
+                document.getElementById('otp-box').style.display = 'block';
+                alert("تم الإرسال!");
+            }).catch(err => alert("خطأ في الإرسال: " + err.message));
     }
 
-    async function verifyOTP() {
-        const code = document.getElementById('otpInput').value;
-        try {
-            await window.confirmationResult.confirm(code);
-        } catch (error) {
-            alert("الرمز غير صحيح");
-        }
+    function verifyCode() {
+        const code = document.getElementById('otp').value;
+        window.confirmationResult.confirm(code)
+            .then(() => {
+                document.querySelector('.login-card').style.display = 'none';
+                document.getElementById('app-content').style.display = 'block';
+                loadMyData();
+            }).catch(() => alert("الرمز خطأ"));
     }
 
-    onAuthStateChanged(auth, (user) => {
-        if (user && user.phoneNumber === ADMIN_PHONE) {
-            document.getElementById('loginPage').style.display = 'none';
-            document.getElementById('mainContent').style.display = 'block';
-            loadData();
-        } else {
-            document.getElementById('loginPage').style.display = 'block';
-            document.getElementById('mainContent').style.display = 'none';
-        }
-    });
-
-    function loadData() {
-        onSnapshot(collection(db, "clients"), (snap) => {
-            let total = 0;
-            const list = document.getElementById('clientsList');
-            list.innerHTML = '';
+    function loadMyData() {
+        db.collection("clients").onSnapshot(snap => {
+            let html = "";
             snap.forEach(doc => {
-                const c = doc.data();
-                total += parseFloat(c.total || 0);
-                list.innerHTML += `<div class="stat-card mb-2 d-flex justify-content-between"><span>${c.name}</span><b>${c.total}</b></div>`;
+                html += `<div style="background:#1c2128; padding:15px; margin:10px; border-radius:10px;">${doc.data().name} - ${doc.data().total} ريال</div>`;
             });
-            document.getElementById('totalInvestment').innerText = total.toLocaleString() + ' ر.س';
+            document.getElementById('data-display').innerHTML = html;
         });
     }
-
-    window.logout = () => signOut(auth).then(() => location.reload());
 </script>
 </body>
 </html>
