--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>تقسيط سعد</title>
+    <title>i-System Pro | التقسيط الذكي</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
@@ -41,6 +41,14 @@
             text-align: center;
         }
 
+        label, .section-title { 
+            color: #ffffff !important; 
+            font-weight: 600 !important;
+            font-size: 0.95rem;
+            margin-bottom: 8px;
+            display: block;
+        }
+
         .form-control { 
             background: #24292f !important; 
             border: 1px solid #3d444d !important; 
@@ -69,11 +77,6 @@
         .nav-item.active { color: var(--accent-orange); font-weight: bold; }
         .nav-item i { font-size: 1.5rem; display: block; margin-bottom: 2px; }
 
-        /* تعديل وضوح الجدول */
-        .table { color: #ffffff !important; }
-        .table thead th { color: #ffffff !important; border-bottom: 2px solid #3d444d !important; font-weight: bold; }
-        .table tbody td { color: #ffffff !important; vertical-align: middle; }
-
         .status-paid { color: var(--success-green); font-weight: bold; background: rgba(46, 204, 113, 0.1); padding: 2px 8px; border-radius: 5px; }
         .status-unpaid { color: var(--error-red); font-weight: bold; background: rgba(231, 76, 60, 0.1); padding: 2px 8px; border-radius: 5px; }
 
@@ -90,65 +93,70 @@
             padding-right: 12px; 
             margin: 20px 0 15px;
             font-size: 1rem;
-            font-weight: bold;
         }
     </style>
 </head>
 <body>
 
 <div id="loginPage" class="p-4 mt-5">
-    <div class="stat-card text-center">
-        <h4 class="fw-bold mb-4">تقسيط سعد</h4>
+    <div class="stat-card text-center shadow-lg">
+        <div style="background: var(--accent-orange); width: 60px; height: 60px; border-radius: 20px; display: flex; align-items: center; justify-content: center; margin: 0 auto 20px;">
+            <i class="bi bi-shield-lock-fill text-white fs-2"></i>
+        </div>
+        <h4 class="fw-bold">نظام i-System</h4>
+        <label class="mt-2 text-center w-100">الرجاء إدخال رمز الوصول</label>
         <input type="password" id="passInput" class="form-control text-center my-4 fs-4" placeholder="••••">
-        <button onclick="login()" class="btn btn-action w-100">دخول</button>
+        <button onclick="login()" class="btn btn-action w-100">تسجيل الدخول</button>
     </div>
 </div>
 
 <div id="mainContent" style="display: none;">
     <section id="homeSection" class="p-3">
-        <div class="stat-card text-center">
-            <label class="text-dim small">إجمالي مبيعات تقسيط سعد</label>
-            <h1 class="fw-bold my-2" id="totalInvestment">0</h1>
-            <div class="badge bg-dark p-2 mt-2">العملاء: <span id="clientsCount">0</span></div>
+        <div class="stat-card text-center border-0" style="background: linear-gradient(145deg, #1c2128, #111418);">
+            <label class="text-center w-100">إجمالي المحفظة الاستثمارية</label>
+            <h1 class="fw-bold my-2" id="totalInvestment" style="color: #ffffff;">0</h1>
+            <div class="badge bg-dark p-2 mt-2" style="color: var(--accent-orange);">عدد العملاء: <span id="clientsCount">0</span></div>
         </div>
 
         <div class="row g-2 mb-3">
-            <div class="col-6"><div class="mini-stat"><small class="text-dim d-block">المحصل</small><span id="statCollected" class="fw-bold text-success">0</span></div></div>
-            <div class="col-6"><div class="mini-stat"><small class="text-dim d-block">الربح الحقيقي</small><span id="statRealProfit" class="fw-bold text-warning">0</span></div></div>
-            <div class="col-6"><div class="mini-stat"><small class="text-dim d-block">باقي بالسوق</small><span id="statRemaining" class="fw-bold text-danger">0</span></div></div>
-            <div class="col-6"><div class="mini-stat"><small class="text-dim d-block">الربح المتوقع</small><span id="statTotalProfit" class="fw-bold text-info">0</span></div></div>
+            <div class="col-6"><div class="mini-stat"><small class="text-dim d-block" style="font-size: 0.7rem;">المحصل</small><span id="statCollected" class="fw-bold" style="color: var(--success-green);">0</span></div></div>
+            <div class="col-6"><div class="mini-stat"><small class="text-dim d-block" style="font-size: 0.7rem;">الأرباح الحالية</small><span id="statRealProfit" class="fw-bold" style="color: #f1c40f;">0</span></div></div>
+            <div class="col-6"><div class="mini-stat"><small class="text-dim d-block" style="font-size: 0.7rem;">المتبقي بالسوق</small><span id="statRemaining" class="fw-bold" style="color: var(--error-red);">0</span></div></div>
+            <div class="col-6"><div class="mini-stat"><small class="text-dim d-block" style="font-size: 0.7rem;">الربح الإجمالي</small><span id="statTotalProfit" class="fw-bold" style="color: #3498db;">0</span></div></div>
+            <div class="col-12"><div class="mini-stat" style="background: rgba(231, 76, 60, 0.05);"><small class="text-dim d-block" style="font-size: 0.7rem;">المتعثرين حالياً</small><span id="statLateCount" class="fw-bold" style="color: var(--error-red);">0</span></div></div>
         </div>
 
         <div class="d-flex justify-content-between align-items-center mb-3 mt-4">
-            <h6 class="fw-bold mb-0 text-white">سجل العملاء</h6>
-            <button id="filterLateBtn" class="btn btn-sm btn-outline-danger px-3 rounded-pill" onclick="toggleLateFilter()">المتأخرين</button>
+            <h6 class="fw-bold mb-0">سجل العملاء</h6>
+            <button id="filterLateBtn" class="btn btn-sm btn-outline-danger px-3 rounded-pill" onclick="toggleLateFilter()">
+                <i class="bi bi-exclamation-triangle-fill"></i> المتأخرين
+            </button>
         </div>
         <div id="clientsList"></div>
     </section>
 
     <section id="addClientSection" class="p-3" style="display:none;">
-        <h5 class="fw-bold mb-3">إضافة عميل جديد</h5>
+        <h5 class="fw-bold mb-3">فتح ملف استثماري</h5>
         <div class="stat-card">
             <form id="clientForm">
-                <div class="section-title">البيانات الشخصية</div>
+                <div class="section-title">بيانات العميل</div>
                 <input type="text" id="cName" class="form-control mb-3" placeholder="الاسم الرباعي" required>
-                <input type="text" id="cID" class="form-control mb-3" placeholder="رقم الهوية" required>
-                <input type="text" id="cPhone" class="form-control mb-3" placeholder="رقم الجوال" required>
-                
+                <div class="row g-2 mb-3">
+                    <div class="col-6"><input type="text" id="cID" class="form-control" placeholder="رقم الهوية" required></div>
+                    <div class="col-6"><input type="text" id="cPhone" class="form-control" placeholder="05xxxxxxxx" required></div>
+                </div>
                 <div class="section-title">بيانات الكفيل</div>
                 <input type="text" id="gName" class="form-control mb-3" placeholder="اسم الكفيل">
-
-                <div class="section-title">البيانات المالية</div>
-                <label class="small text-dim">سعر التكلفة</label>
+                <div class="section-title">الخطة المالية</div>
+                <label>سعر الشراء (التكلفة)</label>
                 <input type="number" id="costAmount" class="form-control mb-3" required>
-                <label class="small text-dim">إجمالي البيع</label>
-                <input type="number" id="amount" class="form-control mb-3" required>
-                <label class="small text-dim">عدد الأقساط (الأشهر)</label>
-                <input type="number" id="instCount" class="form-control mb-3" required>
-                <label class="small text-dim">تاريخ أول قسط</label>
+                <div class="row g-2 mb-3">
+                    <div class="col-6"><label>مبلغ البيع</label><input type="number" id="amount" class="form-control" required></div>
+                    <div class="col-6"><label>الأشهر</label><input type="number" id="instCount" class="form-control" required></div>
+                </div>
+                <label>تاريخ أول قسط</label>
                 <input type="date" id="startDate" class="form-control mb-4" required>
-                
-                <button type="submit" class="btn btn-action w-100">إضافة العقد</button>
+                <button type="submit" class="btn btn-action w-100">إعتماد العقد</button>
             </form>
         </div>
     </section>
@@ -156,18 +164,18 @@
     <section id="detailsSection" class="p-3" style="display:none;">
         <div class="d-flex justify-content-between align-items-center mb-4">
             <button class="btn btn-dark rounded-circle" onclick="showSection('home')"><i class="bi bi-chevron-right text-white"></i></button>
-            <h6 class="fw-bold mb-0">كشف الحساب</h6>
-            <button class="btn btn-sm btn-light fw-bold" onclick="downloadPDF()">PDF</button>
+            <h6 class="fw-bold mb-0">كشف حساب</h6>
+            <button class="btn btn-sm btn-light fw-bold px-3 shadow-sm" onclick="downloadPDF()"><i class="bi bi-file-earmark-pdf-fill"></i> PDF</button>
         </div>
         <div id="pdfArea"><div id="clientDetailsContent"></div></div>
     </section>
 
     <section id="settingsSection" class="p-3" style="display:none;">
         <div class="stat-card text-center">
-            <h6>تغيير كلمة المرور</h6>
-            <input type="password" id="newPass" class="form-control my-3 text-center" placeholder="الرمز الجديد">
-            <button onclick="changePassword()" class="btn btn-action w-100">تحديث</button>
-            <button onclick="logout()" class="btn btn-outline-danger w-100 mt-4 border-0">خروج</button>
+            <h6>إعدادات الأمان</h6>
+            <input type="password" id="newPass" class="form-control my-3 text-center" placeholder="رمز جديد">
+            <button onclick="changePassword()" class="btn btn-action w-100">تحديث الرمز</button>
+            <button onclick="logout()" class="btn btn-outline-danger w-100 mt-4 border-0">تسجيل خروج</button>
         </div>
     </section>
 
@@ -216,6 +224,10 @@
 
     window.toggleLateFilter = () => {
         showOnlyLate = !showOnlyLate;
+        const btn = document.getElementById('filterLateBtn');
+        btn.classList.toggle('btn-danger', showOnlyLate);
+        btn.classList.toggle('btn-outline-danger', !showOnlyLate);
+        btn.innerHTML = showOnlyLate ? 'عرض الكل' : '<i class="bi bi-exclamation-triangle-fill"></i> المتأخرين';
         renderHome();
     };
 
@@ -240,8 +252,7 @@
         }
         await addDoc(clientsCol, {
             name: document.getElementById('cName').value, idNum: document.getElementById('cID').value,
-            phone: document.getElementById('cPhone').value, cost: cost, total: amount, installments: installments,
-            guarantor: document.getElementById('gName').value
+            phone: document.getElementById('cPhone').value, cost: cost, total: amount, installments: installments
         });
         this.reset(); showSection('home');
     };
@@ -249,7 +260,7 @@
     function renderHome() {
         const list = document.getElementById('clientsList');
         list.innerHTML = '';
-        let totalSales = 0, collected = 0, totalCost = 0;
+        let totalSales = 0, collected = 0, totalCost = 0, lateCount = 0;
         const today = new Date().toISOString().split('T')[0];
 
         clients.forEach(c => {
@@ -258,6 +269,7 @@
                 if(inst.status === 'مدفوع') { collected += parseFloat(inst.amount); clientPaid += parseFloat(inst.amount); }
                 else if (inst.dueDate < today) hasLate = true;
             });
+            if(hasLate) lateCount++;
             if(showOnlyLate && !hasLate) return;
             totalSales += parseFloat(c.total); totalCost += parseFloat(c.cost || 0);
 
@@ -265,17 +277,17 @@
                 <div class="client-row" style="${hasLate ? 'border-right: 5px solid var(--error-red);' : ''}">
                     <div><h6 class="mb-0 fw-bold text-white">${c.name}</h6><small class="text-dim">الباقي: ${(c.total - clientPaid).toLocaleString()}</small></div>
                     <div class="d-flex gap-2">
-                        <button class="btn btn-sm text-info fs-5" onclick="viewClient('${c.id}')"><i class="bi bi-eye-fill"></i></button>
-                        <button class="btn btn-sm text-danger fs-5" onclick="deleteClient('${c.id}')"><i class="bi bi-trash3-fill"></i></button>
+                        <button class="btn btn-sm btn-outline-info border-0 fs-5" onclick="viewClient('${c.id}')"><i class="bi bi-eye-fill"></i></button>
+                        <button class="btn btn-sm btn-outline-danger border-0 fs-5" onclick="deleteClient('${c.id}')"><i class="bi bi-trash3-fill"></i></button>
                     </div>
                 </div>`;
         });
-        document.getElementById('totalInvestment').innerText = totalSales.toLocaleString();
+        document.getElementById('totalInvestment').innerText = totalSales.toLocaleString() + ' ر.س';
         document.getElementById('statCollected').innerText = collected.toLocaleString();
         document.getElementById('statRemaining').innerText = (totalSales - collected).toLocaleString();
         document.getElementById('statTotalProfit').innerText = (totalSales - totalCost).toLocaleString();
+        document.getElementById('statLateCount').innerText = lateCount;
         document.getElementById('statRealProfit').innerText = (collected > totalCost ? collected - totalCost : 0).toLocaleString();
-        document.getElementById('clientsCount').innerText = clients.length;
     }
 
     window.sendWhatsAppReminder = (clientId, instIndex) => {
@@ -288,11 +300,11 @@
 
     window.viewClient = (id) => {
         const client = clients.find(c => c.id === id);
-        let html = `<div class="stat-card border-0">
+        let html = `<div class="stat-card border-0 shadow-lg">
             <h5 class="fw-bold text-white">${client.name}</h5>
-            <div class="small text-dim mb-3">الهوية: ${client.idNum} | الكفيل: ${client.guarantor || 'لا يوجد'}</div>
+            <div class="small text-dim mb-3">الجوال: ${client.phone} | الهوية: ${client.idNum}</div>
             <table class="table table-dark table-borderless small">
-                <thead><tr><th>التاريخ</th><th>المبلغ</th><th>الحالة</th><th>تذكير</th></tr></thead>
+                <thead><tr class="text-dim border-bottom border-secondary"><th>التاريخ</th><th>المبلغ</th><th>الحالة</th><th>تذكير</th></tr></thead>
                 <tbody>`;
         client.installments.forEach((inst, idx) => {
             const sClass = inst.status === 'مدفوع' ? 'status-paid' : 'status-unpaid';
@@ -311,7 +323,7 @@
         viewClient(id);
     };
 
-    window.deleteClient = async (id) => { if(confirm("هل أنت متأكد من حذف العميل؟")) await deleteDoc(doc(db, "clients", id)); };
+    window.deleteClient = async (id) => { if(confirm("حذف نهائي؟")) await deleteDoc(doc(db, "clients", id)); };
     window.downloadPDF = () => { html2pdf().from(document.getElementById('pdfArea')).save('Statement.pdf'); };
     window.changePassword = () => { localStorage.setItem('systemPass', document.getElementById('newPass').value); alert('تم التحديث'); };
     window.logout = () => location.reload();
